--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4
 
 .col-md-3, .col-md-8
 {
-    background: white;
+    background: rgba(255, 255, 255, 0.800);
     margin-right: 1vw;
     margin-left: 1vw;
     margin-top: 0.5vw;
